button style fixed on ios, attmepting to fix textarea width on ios

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,9 @@ input textarea {
 -moz-appearance: none;
 appearance: none;
 }
+textarea {
+  -webkit-max-width: 480px;
+}
 .material-icons {
   margin: 0 !important;
 }
